# TW-Pulse-CLI

./: .env.example  .gitignore  Antigravity反向代理配置說明.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  OpenAI格式測試報告.md  Pulse未調用反向代理診斷.md  Pulse語言問題修復報告.md  Pulse語言問題最終修復報告.md  README.md  TODO.md  USAGE.md  changelog.md  chat_result_utf8.txt  chat_test_result.txt  check_config.py  check_prompts_version.py  check_result.txt  fix_language_issue.ps1  pyproject.toml  test_ai_language_response.py  test_analyze_language.py  test_chat_mode_language.py  test_full_flow.py  test_openai_format.py  test_output.txt  test_proxy.py  test_pulse_config.py  test_venv_call.py  修復總結報告.md  印尼語問題完整診斷報告.md  反向代理診斷報告.md  新增Gemini3模型與本地代理支援.md  策略模組系統實作.md  重啟指引.md
.agent/workflows/: powershell-script.md  project-init.md  python-script.md  script-standards.md  strategy.md  test-file-standards.md  update-changelog.md
config/: pulse.yaml
data/: stock_list.json  tickers.json  tpex_stocks.csv  tw.tickers.json  tw_codes_listed.json  tw_codes_otc.json  tw_tickers_old.json  twse_stocks.csv
docs/: GITHUB_UPLOAD_GUIDE.md
pulse/: __init__.py
pulse/ai/: __init__.py  client.py  prompts.py
pulse/cli/: __init__.py  app.py
pulse/core/: __init__.py  agent.py  chart_generator.py  charts.py  config.py  forecasting.py  models.py  screener.py  smart_agent.py  trading_plan.py
pulse/report/: backtest_2330_20260125_153923.md  backtest_2330_20260125_154231.md  backtest_2330_20260125_154557.md
pulse/reports/: __init__.py  trade_report.py
pulse/utils/: __init__.py  constants.py  formatters.py  logger.py  retry.py  rich_output.py  validators.py
report/: backtest_2330_20260125_191214.md  backtest_2330_20260125_200623.md
scripts/: fetch_stock_list.py
tests/: analyze_price_after_jun05.py  check_ma200.py  debug_after_june05.py  debug_capital.py  debug_june.py  debug_pulse.ps1  diagnose_backtest_gap.py  diagnose_backtest_logic.py  diagnose_full_backtest.py  diagnose_no_trade_after_defense.py  diagnose_rsi_triggers.py  diagnose_simple.py  diagnose_trade_failure.py  full_simulation.py  generate_backtest_report.py  test_backtest_output.py  test_capital_logic.py  test_capital_manager.py  test_dynamic_capital.py  test_june_trade.py  test_ma200_breakout.py  test_position_fix.py  test_report_fix.py  test_report_format.py  test_report_format_full.py  test_strategy_cmd.py
(+62 files in other folders)
